@@ -20,16 +20,15 @@ import java.nio.charset.Charset;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-import org.eclipse.kapua.KapuaException;
-import org.eclipse.kapua.locator.KapuaLocator;
 import org.eclipse.kapua.message.KapuaPosition;
 import org.eclipse.kapua.model.query.KapuaListResult;
 import org.eclipse.kapua.service.device.registry.event.DeviceEvent;
-import org.eclipse.kapua.service.user.UserService;
 
 import com.opencsv.CSVWriter;
+import org.apache.commons.lang3.CharEncoding;
 
 public class DeviceEventExporterCsv extends DeviceEventExporter {
 
@@ -44,32 +43,30 @@ public class DeviceEventExporterCsv extends DeviceEventExporter {
 
     @Override
     public void init(final String scopeId, String clientId)
-            throws ServletException, IOException, KapuaException {
+            throws IOException {
         this.scopeId = scopeId;
         this.clientId = clientId;
         dateFormat = new SimpleDateFormat("MM/dd/yyyy HH:mm:ss.SSS");
 
         response.setContentType("text/csv");
-        response.setCharacterEncoding("UTF-8");
-        response.setHeader("Content-Disposition", "attachment; filename*=UTF-8''" + URLEncoder.encode(clientId, "UTF-8") + "_device_events.csv");
+        response.setCharacterEncoding(CharEncoding.UTF_8);
+        response.setHeader("Content-Disposition", "attachment; filename*=UTF-8''" + URLEncoder.encode(clientId, CharEncoding.UTF_8) + "_device_events.csv");
         response.setHeader("Cache-Control", "no-transform, max-age=0");
 
-        OutputStreamWriter osw = new OutputStreamWriter(response.getOutputStream(), Charset.forName("UTF-8"));
-        writer = new CSVWriter(osw);
+        OutputStreamWriter osw = new OutputStreamWriter(response.getOutputStream(), Charset.forName(CharEncoding.UTF_8));
+        try {
+            writer = new CSVWriter(osw);
 
-        List<String> cols = new ArrayList<String>();
-        for (String property : DEVICE_PROPERTIES) {
-            cols.add(property);
+            List<String> cols = new ArrayList<String>(Arrays.asList(DEVICE_PROPERTIES));
+            writer.writeNext(cols.toArray(new String[]{ }));
+        } finally {
+            osw.close();
         }
-        writer.writeNext(cols.toArray(new String[] {}));
     }
 
     @Override
-    public void append(KapuaListResult<DeviceEvent> deviceEvents)
-            throws ServletException, IOException {
+    public void append(KapuaListResult<DeviceEvent> deviceEvents) {
 
-        KapuaLocator locator = KapuaLocator.getInstance();
-        final UserService userService = locator.getService(UserService.class);
         for (final DeviceEvent deviceEvent : deviceEvents.getItems()) {
 
             List<String> cols = new ArrayList<String>();
