@@ -25,6 +25,8 @@ import org.eclipse.kapua.commons.util.xml.XmlUtil;
 import org.eclipse.kapua.locator.KapuaLocator;
 import org.eclipse.kapua.service.device.management.configuration.DeviceConfiguration;
 import org.eclipse.kapua.service.device.management.configuration.DeviceConfigurationManagementService;
+
+import org.apache.commons.lang3.CharEncoding;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,7 +39,7 @@ public class DeviceSnapshotsServlet extends HttpServlet {
     @Override
     public void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        response.setCharacterEncoding("UTF-8");
+        response.setCharacterEncoding(CharEncoding.UTF_8);
         PrintWriter writer = response.getWriter();
         try {
 
@@ -61,8 +63,8 @@ public class DeviceSnapshotsServlet extends HttpServlet {
             response.setContentType("application/xml; charset=UTF-8");
             response.setHeader("Cache-Control", "no-transform, max-age=0");
             response.setHeader("Content-Disposition", String.format(contentDispositionFormat,
-                    URLEncoder.encode(account, "UTF-8"),
-                    URLEncoder.encode(clientId, "UTF-8"),
+                    URLEncoder.encode(account, CharEncoding.UTF_8),
+                    URLEncoder.encode(clientId, CharEncoding.UTF_8),
                     snapshotId));
 
             XmlUtil.marshal(conf, writer);
